add application deletion
